--- a/estilo.css
+++ b/estilo.css
@@ -127,16 +127,15 @@ main .img-logo img {
     border-radius: 8px;
 }
 
-/*SECTION */
+/*SECTION- objetivos */
 
 .conteudo-objetivos {
-    width: 90%;
-    max-width: 980px;
-    height: 70%;
-    margin: auto;
-    display:grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 25px;
+    margin: 6px auto 120px auto;
+    display:flex;
+    justify-content: center;
+    text-align: justify;  
+    flex-wrap: wrap;
+    gap: 8px;  
 }
 
 .titulo-obj h1 {          /*ESTÁ ANTES DA SECTION */
@@ -144,111 +143,107 @@ main .img-logo img {
     font-family: 'Roboto Condensed';
     color: #212020;
     display: flex;
-    text-align: center;   
+    justify-content: center;  
     max-width: 980px;
     margin: auto;
-    padding-bottom: 45px;
+    padding-bottom: 55px;
 }
 
 
 .texto-obj {
     margin: 10px;
-    font-size: 16px;
-    line-height: 24px;
+    font-size: 18px;
+    line-height: 29px;
     font-weight: 400;
-    color: #6e6a6a;
+    color: #a5a9ac;
+    display: flex;
 }
 
 .cards-objetivos {
+    width: 300px;
+    min-width: 250px;
+    height: 380px;
     display: flex;
-    flex-direction: column;
     border-radius: 7px;
     cursor: pointer;
-    box-shadow: 7px 7px 15px -5px;
+    box-shadow: 8px 8px 15px -5px;
     transition: all 0.5s ease 0.1s;
+    margin: 10px;
+    align-content: center;
+    background: #464748 url("./imagens/simbolenergfinalp3.png");
+    overflow: hidden;
 }
 
 .cards-objetivos:hover {
     transform: translateY(-2px) scale(1.1);
 }
 
-.img-obj {
-    height: 250px;
-    padding-top: 55%;
-    overflow: hidden;
-    position: relative;
-    border-radius: 7px;
-}
-
-.img-obj img {
-    width: 100%;
-    min-width: 300px;
-    position: absolute;
-    border-radius: 10px;
-    top:55%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
 /*SECTION - VANTAGENS*/
 
-.vantagens {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    width: 100%;
-    height: 90vh;
-    margin: 120px auto;
-    text-align:center;
-    justify-content: space-around;    
-    background-color: #BE5B00;
-    color:#212020;
-    border-radius: 3px;
-    overflow: hidden;
+.container-vantagens {
+    /*height: 550px;*/
+    display: flex;
+    flex-wrap: wrap;
+    background-color: #b95f15;
+    color:#2d2c2c;
+    justify-content: center;
+    gap: 5px;
+    margin: 0px 2px 100px 0px ;
+    padding-top: 70px;
+    border-radius: 4px;
 }
 
-.titulo-vantagens {
-    grid-column-start: 1;
-    grid-column-end: 5;
-    grid-row-start: 1;
-    grid-row-end: 1;
-
+.vantagem {
+    width: 300px;    
 }
 
-.vantagens h1 {
+#titulo-vantagens h1 {
+    display: flex;
     font-family: 'Roboto Condensed';
-    font-size: 46px;
-    padding-top: 80px;
+    font-size: 42px;
+    font-weight: 600;
+    background-color: #b95f15;
+    color:#1C1C1C;
+    justify-content: center;
+    margin: 0px;
+    padding-top: 60px;
 }
 
-.vantagens h3 {
+.vantagem h3 {
+    display: flex;
+    justify-content: center;
     font-family: 'Roboto Condensed';
     font-size: 30px;
+    color:#1C1C1C;
     padding-bottom: 15px;
 }
 
-.vantagens p {
+.vantagem p {
+    font-weight:600;
+    font-size: 20px;
+    font-family: 'Roboto Condensed';
+    line-height: 33px;
+    display: flex;
     text-align: justify;
-    padding-left: 20px;
+    padding: 15px;
 }
 
-.vatagem-4 {
-    padding-right: 10px;
-}
 
-/*SECTION 2 -regioes atendimento*/
+/*SECTION 2 -regioes atendidas*/
 
 .regiao-atendimento {
     display:flex;  
+    justify-content: center;
     align-items: center;   
     max-width: 980px;
-    margin: 80px auto;
+    margin: 80px auto 160px auto;
 }
 
-.titulo-regiao  {
-    height: 100px;
+#titulo-regiao  {
     display:flexbox;
-    color: #212020;
-    font-size: 50px;
+    color: #1C1C1C;
+    font-size: 42px;
+    font-weight: 600;
     font-family: 'Roboto Condensed';
     text-align: center;
     line-height: 100px;
@@ -256,14 +251,14 @@ main .img-logo img {
 
 .img-mapa img {
     display: flex;
-    width: 450px;
+    width: 480px;
     align-items: center;
     
 }
 
-.texto-reg-atendimento {
+.texto-reg-atendimento p {
     font-size: 20px;
-    color: #424242;
+    color: #2d2c2c;
     line-height: 30px;
     margin: 15px auto;
     padding-left: 30px;
@@ -273,38 +268,42 @@ main .img-logo img {
 .italico {
     font-style: italic;
     color: black;
+    font-size: 22px;
 }
 
 /*FOOTER*/
 
 .rodape {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    display: flex;
+    justify-content: space-around;
     width: 100%;
-    height: 200px;
-    margin: 5px auto;
     background-color: black;
     color: #eaedf0;
-    text-align: justify;
-    place-items: center;
+    font-size: 18px;
 }
 
 .rodape img{
     width: 50px;  
 }
 
-.rodape h4 {
-    padding-top: 10px;
+.titulo-rodapes {
+    padding-top: 15px;
     padding-bottom: 20px;
+}
+
+.titulo-rodapes h4 {
     color: #ff8826;
+    margin: 15px 0 15px 0;
 }
 
-.rodape p {
-    padding: 5px;
+.titulo-rodapes p {
+    line-height: 30px;
+    margin: 15px auto;
+    justify-content: center;
 }
 
 
-.rodape ul li a {
+.titulo-rodapes ul li a {
     color: white;
     text-decoration: none;
     line-height: 30px;
